---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:5:16]
 4 │ fn test() {
 5 │   let s = Shape::Circle(5);
   ·                ─┬
   ·                 ╰── invalid syntax
 6 │ }
   ╰────
  help: Use `.` instead of `::` for enum variant access, e.g. `Shape.Circle` · code: [parse.syntax_error]
